--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,7 @@ install:
 build_script:
   - docker pull "%SRC_IMAGE%"
   - docker run "%SRC_IMAGE%" "%SRC_PYTHON_EXE%" --version
-  - docker login -u="$env:DOCKERHUB_USERNAME" -p="$env:DOCKERHUB_PASSWORD"
+  - ps: docker login -u="$env:DOCKERHUB_USERNAME" -p="$env:DOCKERHUB_PASSWORD"
 
 #deploy_script:
 #  - docker push me/myfavoriteapp
