--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,17 +11,18 @@ environment:
     - NAME: python_3
       SRC_IMAGE: python:3-windowsservercore-ltsc2016
       SRC_PYTHON_EXE: python
-    - NAME: python_2
-      SRC_IMAGE: python:2-windowsservercore-ltsc2016
-      SRC_PYTHON_EXE: python
+#    - NAME: python_2
+#      SRC_IMAGE: python:2-windowsservercore-ltsc2016
+#      SRC_PYTHON_EXE: python
 
 install:
   - docker version
 
 build_script:
-  - docker pull "%SRC_IMAGE%"
-  - docker run "%SRC_IMAGE%" "%SRC_PYTHON_EXE%" --version
-#  - ps: docker login -u="$env:DOCKERHUB_USERNAME" -p="$env:DOCKERHUB_PASSWORD"
-
+  #- docker pull "%SRC_IMAGE%"
+  #- ps: docker login -u="$env:DOCKERHUB_USERNAME" -p="$env:DOCKERHUB_PASSWORD"
+  - docker build --compress --no-cache --squash -t junk
+  - docker run junk python --version
+  - docker images
 #deploy_script:
 #  - docker push me/myfavoriteapp
