--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,8 +21,11 @@ install:
 build_script:
   #- docker pull "%SRC_IMAGE%"
   #- ps: docker login -u="$env:DOCKERHUB_USERNAME" -p="$env:DOCKERHUB_PASSWORD"
-  - docker build --compress --no-cache -t junk junk
-  - docker run junk python --version
-  - docker images
+  #- docker build --compress --no-cache -t junk junk
+  #- docker run junk python --version
+  #- docker images
+  - ps: Measure-Command {start-process docker pull 3.7-windowsservercore-ltsc2016 -Wait}
+  - ps: Measure-Command {start-process docker pull 3.6-windowsservercore-ltsc2016 -Wait}
+  - ps: Measure-Command {start-process docker pull 2.7-windowsservercore-ltsc2016 -Wait}
 #deploy_script:
 #  - docker push me/myfavoriteapp
