--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,24 +8,27 @@ environment:
   DOCKERHUB_PASSWORD:
     secure: AG+2JWjLA8d1z4FkC7CrpCjM/2sgStt0wtbgV3n54uv8DK2yJb6rx5In2K7ZOXhl
   matrix:
-    - NAME: python_3
-      SRC_IMAGE: python:3-windowsservercore-ltsc2016
+    - NAME: python_3.7
+      SRC_IMAGE: python:3.7-windowsservercore-ltsc2016
       SRC_PYTHON_EXE: python
-#    - NAME: python_2
-#      SRC_IMAGE: python:2-windowsservercore-ltsc2016
-#      SRC_PYTHON_EXE: python
-
-install:
-  - docker version
+    - NAME: python_3.6
+      SRC_IMAGE: python:3.6-windowsservercore-ltsc2016
+      SRC_PYTHON_EXE: python
+    - NAME: python_2.7
+      SRC_IMAGE: python:2.7-windowsservercore-ltsc2016
+      SRC_PYTHON_EXE: python
 
 build_script:
-  #- docker pull "%SRC_IMAGE%"
+  - docker pull "%SRC_IMAGE%"
+  - docker run "%SRC_IMAGE%" "%SRC_PYTHON_EXE%" --version
+  - docker images
   #- ps: docker login -u="$env:DOCKERHUB_USERNAME" -p="$env:DOCKERHUB_PASSWORD"
   #- docker build --compress --no-cache -t junk junk
   #- docker run junk python --version
   #- docker images
-  - docker pull python:3.7-windowsservercore-ltsc2016
-  - docker pull python:3.6-windowsservercore-ltsc2016
-  - docker pull python:2.7-windowsservercore-ltsc2016
+  #- docker pull python:3.7-windowsservercore-ltsc2016
+  #- docker pull python:3.6-windowsservercore-ltsc2016
+  #- docker pull python:2.7-windowsservercore-ltsc2016
+
 #deploy_script:
 #  - docker push me/myfavoriteapp
